langtools/test/tools/javac/generics/InstanceOf3.out
InstanceOf3.java:12:48: compiler.err.illegal.generic.type.for.instof
1 error
